Motivate ecological metacrisis links

--- a/predicaments/Extreme weather.html
+++ b/predicaments/Extreme weather.html
@@ -16,17 +16,33 @@ I stugan sitter så blek om kinden en liten flicka vid spisens häll.<br>
 Den bleka hyn och de tärda dragen de vittna tydligt om sjukdom, nöd,<br>
 och hennes pappa har hela dagen för krogen glömt skaffa barnen bröd.</p>
 <cite>Anders G. Bergh</cite>
-</blockquote><p><strong>Connections:</strong></p><ul>
-<li><a data-href="Ecological crisis" href="../Ecological crisis.html">Ecological crisis</a></li>
-<li><a data-href="Tipping points" href="../Tipping points.html">Tipping points</a></li>
-<li><a data-href="Lack of resilient systems" href="../Lack of resilient systems.html">Lack of resilient systems</a></li>
-<li><a data-href="Lack of attentiveness" href="../Lack of attentiveness.html">Lack of attentiveness</a></li>
-<li><a data-href="Delusional domination of nature" href="../Delusional domination of nature.html">Delusional domination of nature</a></li>
-<li><a data-href="Mass climate migration" href="../Mass climate migration.html">Mass climate migration</a></li>
-<li><a data-href="Resource conflicts" href="../Resource conflicts.html">Resource conflicts</a></li>
-<li><a data-href="War" href="../War.html">War</a></li>
-<head>
-<link rel="stylesheet" href="../css/styles.css">
-<base target="_top">
-</head>
-<h2></h2>
+</blockquote>
+<p><strong>Connections:</strong></p><ul>
+	<li><strong><a href="../Access to food.html">Access to food</a></strong> - Farmers are dependent on the weather for good harvests.</li>
+	<li><strong><a href="../Access to water.html">Access to water</a></strong> - Both droughts and floods will increase but less evenly distributed.</li>
+	<li><strong><a href="../Agriculture.html">Agriculture</a></strong> - Weather conditions will always affect how we produce our food.</li>
+	<li><strong><a href="../Big tech.html">Big tech</a></strong> - The more volatile the weather systems become, the more likely that companies try to capitalise on geoengineering projects to stabilise the weather through technology.</li>
+	<li><strong><a href="../Biodiversity loss.html">Biodiversity loss</a></strong> - The weather is changing faster than many species can adapt to.</li>
+	<li><strong><a href="../Cognitive dissonance.html">Cognitive dissonance</a></strong> - People in places that are less negatively affected by extreme weather will have issues with understanding what the problem is. For example, hotter and longer summers in Sweden? Sign me up!</li>
+	<li><strong><a href="../Desertification.html">Desertification</a></strong> - Rainfall or lack of it can both lead to desertification.</li>
+	<li><strong><a href="../Ecological crisis.html">Ecological crisis</a></strong> - Extreme weather conditions are some of the clearest and most obvious factors for humans in the ecological crisis. Floods, heat weaves, temperature records, snow, unusual weather phenomena are all directly lived and experienced. How loud will the sirens have to be for the warnings to be heard?</li>
+	<li><strong><a href="../Energy consumption increasing.html">Energy consumption increasing</a></strong> - As outside temperatures vary we prefer inside temperatures to stay stable. Turn up the AC, will you, love?</li>
+	<li><strong><a href="../Hemispherical asymmetry (Earth).html">Hemispherical asymmetry (Earth)</a></strong> - Poorer countries somewhere else will take the first hits from extreme weather. When our ACs break it'll be too late for us.</li>
+	<li><strong><a href="../Lack of humility.html">Lack of humility</a></strong> - Humanity might suddenly have to come to terms with just how small we are.</li>
+	<li><strong><a href="../Loss of insect biomass.html">Loss of insect biomass</a></strong> - The weather is changing faster than many insect species can adapt to.</li>
+	<li><strong><a href="../Mass climate migration.html">Mass climate migration</a></strong> - Droughts, floods, and the short fuse of the heavens will force many people to leave their homes.</li>
+	<li><strong><a href="../Moloch.html">Moloch</a></strong> - Moloch does not rust, his horns pierce the sky, he is flame and quake, flood and pest.</li>
+	<li><strong><a href="../Out of touch with seasons.html">Out of touch with seasons</a></strong> - <a href="https://wisdomtrove.com/author_quotes/dogen-quotes/">Can you paint spring without painting plums and peaches?</a></li>
+	<li><strong><a href="../Poverty.html">Poverty</a></strong> - Instable weather conditions can push people into poverty.</li>
+	<li><strong><a href="../Resource conflicts.html">Resource conflicts</a></strong> - As weather-dependent resources become less evenly distributed, we will see increases in resource conflicts.</li>
+	<li><strong><a href="../Soil erosion.html">Soil erosion</a></strong> - Extreme weather can cause soil erosion.</li>
+	<li><strong><a href="../Unheeded warnings.html">Unheeded warnings</a></strong> - Can nature be any clearer with its communication?</li>
+	<li><strong><a href="../War.html">War</a></strong> - Floods, droughts, fires... Wars have been declared over less.</li>
+
+
+<br>
+<br>
+<br>
+</ul>
+</body>
+</html>
