--- a/predicaments/List of possibilities.html
+++ b/predicaments/List of possibilities.html
@@ -156,7 +156,7 @@
 <li>Reimagining cities, villages, infrastructure</li>
 <li>Resilience</li>
 <li>Salvaging the ruins</li>
-<li>Fungi (svamp, slutet på John Cages Indeterminacy)</li>
+<li>Fungi</li>
 <li>Biomimicry</li>
 <li>Avant-garde</li>
 <li>Bullshit intolerance</li>
@@ -207,4 +207,15 @@
 <li>Non-doing</li>
 <li>Bricolage</li>
 <li>Soulmaking Dharma Lattice</li>
-</ol></body></html>
+<li>Do the impossible</li>
+<li>Vows of the boddhisattva</li>
+<li>Free improvisation</li>
+<li>Access to land</li>
+<li>Intentionality</li>
+<li>Different tools</li>
+<li>Prayers</li>
+</ol>
+<br>
+<br>
+<br>
+</body></html>
