--- a/predicaments/Soil erosion.html
+++ b/predicaments/Soil erosion.html
@@ -25,16 +25,25 @@
 <h2></h2><p>If the local culture cannot preserve and improve the local soil, then, as both reason and history inform us, the local community will decay and perish, and the work of soil building will be resumed by nature. A human community, then, if it is to last long, must exert a sort of centripetal force, holding local soil and local memory in place. Practically speaking, human society has no work more important than this.</p>
 <cite>Wendell Berry</cite>
 </blockquote><p><strong>Connections:</strong></p><ul>
-<li><a data-href="Tipping points" href="../Tipping points.html">Tipping points</a></li>
-<li><a data-href="Ecological crisis" href="../Ecological crisis.html">Ecological crisis</a></li>
-<li><a data-href="Desertification" href="../Desertification.html">Desertification</a></li>
-<li><a data-href="Deforestation" href="../Deforestation.html">Deforestation</a></li>
-<li><a data-href="Climate change" href="../Climate change.html">Climate change</a></li>
-<li><a data-href="Monocultures (agriculture)" href="../Monocultures (agriculture).html">Monocultures (agriculture)</a></li>
-<li><a data-href="Ignored externalities" href="../Ignored externalities.html">Ignored externalities</a></li>
-<li><a data-href="Social erosion" href="../Social erosion.html">Social erosion</a></li>
-<head>
-<link rel="stylesheet" href="../css/styles.css">
-<base target="_top">
-</head>
-<h2></h2>
+	<li><strong><a href="../Access to food.html">Access to food</a></strong> - Soil erosion threatens our access to food directly.</li>
+	<li><strong><a href="../Agriculture.html">Agriculture</a></strong> - It threatens our access to food mainly through affecting agriculture.</li>
+	<li><strong><a href="../Carbon fundamentalism.html">Carbon fundamentalism</a></strong> - Soil erosion is complex and complicated whereas carbon emissions appear to be more simple.</li>
+	<li><strong><a href="../Climate change.html">Climate change</a></strong> - Eroded soil does not do well in creating conditions for areas to sequester carbon. Among other issues. Did I just fall in the carbon fundamentalism trap? Shit. Well, soil erosion contributes to climate change.</li>
+	<li><strong><a href="../Desertification.html">Desertification</a></strong> - Soil erosion is often the first step towards desertification.</li>
+	<li><strong><a href="../Ecological crisis.html">Ecological crisis</a></strong> - Soil erosion is a clear part of the ecological crisis.</li>
+	<li><strong><a href="../Faulty meta-optimisation.html">Faulty meta-optimisation</a></strong> - Optimising for maximisation of short-term agricultural gains have set us up for catastrophy.</li>
+	<li><strong><a href="../Ignorance of ongoing collapse.html">Ignorance of ongoing collapse</a></strong> - If we end up not having any more arable land it's game-over.</li>
+	<li><strong><a href="../Lack of systems thinking.html">Lack of systems thinking</a></strong> - If we do not rethink agriculture from a systems thinking perspective we're royally fucked.</li>
+	<li><strong><a href="../Malnutrition.html">Malnutrition</a></strong> - Sunlight, water, and soil. The basis for all our nutrition.</li>
+	<li><strong><a href="../Resource conflicts.html">Resource conflicts</a></strong> - Arable land is turning into a diminishing resource that will be fought over.</li>
+	<li><strong><a href="../Resources.html">Resources</a></strong> - To re-source, year after year, the nutrients we require, the soil must remain fertile.</li>
+	<li><strong><a href="../Social erosion.html">Social erosion</a></strong> - As above, so below. As below, so above.</li>
+	<li><strong><a href="../Tipping points.html">Tipping points</a></strong> - Soil erosion can occur quite rapidly whereas soil regeneration might take more than decades.</li>
+	<li><strong><a href="../Acceleration.html">War</a></strong> - Conflicts over arable land can,will, and has already turned into full-scale wars.</li>
+
+
+<br>
+<br>
+<br>
+</ul>
+</html>
