--- a/predicaments/Microplastics.html
+++ b/predicaments/Microplastics.html
@@ -11,27 +11,21 @@
 <p>Although man’s record as a steward of the natural resources of the earth has been a discouraging one, there has long been a certain comfort in the belief that the sea, at least, was inviolate, beyond man’s ability to change and to despoil. But this belief, unfortunately, has proved to be naïve.</p>
 <cite>Rachel Carson, The Sea Around Us</cite>
 </blockquote><p><strong>Connections:</strong></p><ul>
-<li><a data-href="Climate change" href="../Climate change.html">Climate change</a></li>
-<li><a data-href="Ecological crisis" href="../Ecological crisis.html">Ecological crisis</a></li>
-<li><a data-href="Pollution" href="../Pollution.html">Pollution</a></li>
-<li><a data-href="Planetary boundaries" href="../Planetary boundaries.html">Planetary boundaries</a></li>
-<li><a data-href="Ignored externalities" href="../Ignored externalities.html">Ignored externalities</a></li>
-<li><a data-href="Cars" href="../Cars.html">Cars</a></li>
-<li><a data-href="Electric vehicle solutions" href="../Electric vehicle solutions.html">Electric vehicle solutions</a></li>
-<li><a data-href="Carbon fundamentalism" href="../Carbon fundamentalism.html">Carbon fundamentalism</a></li>
-<li><a data-href="Lack of systems thinking" href="../Lack of systems thinking.html">Lack of systems thinking</a></li>
-<li><a data-href="Failure to take responsibility" href="../Failure to take responsibility.html">Failure to take responsibility</a></li>
-<li><a data-href="Greenwashing" href="../Greenwashing.html">Greenwashing</a></li>
-<li><a data-href="Blaming the people" href="../Blaming the people.html">Blaming the people</a></li>
-<li><a data-href="Carelessness" href="../Carelessness.html">Carelessness</a></li>
-<li><a data-href="Lack of the longterm" href="../Lack of the longterm.html">Lack of the longterm</a></li>
-<li><a data-href="Poisoning the water, the earth, the air" href="../Poisoning the water, the earth, the air.html">Poisoning the water, the earth, the air</a></li>
-<li><a data-href="The desacration of all places" href="../The desacration of all places.html">The desacration of all places</a></li>
-<li><a data-href="Healthcare" href="../Healthcare.html">Healthcare</a></li>
-<li><a data-href="Failure to take responsibility" href="../Failure to take responsibility.html">Failure to take responsibility</a></li>
-<li><a data-href="Immoral justifications" href="../Immoral justifications.html">Immoral justifications</a></li>
-<head>
-<link rel="stylesheet" href="../css/styles.css">
-<base target="_top">
-</head>
-<h2></h2>
+	<li><strong><a href="../Avoiding radical options.html">Avoiding radical options</a></strong> - Not use plastic? What, are you insane?</li>
+	<li><strong><a href="../Biodiversity loss.html">Biodiversity loss</a></strong> - Not all species thrive with plastic in their bodies.</li>
+	<li><strong><a href="../Ecological crisis.html">Ecological crisis</a></strong> - The spreading of microplastics, especially in the oceans, is a part of the ecological crisis we will have to stop and then undo.</li>
+	<li><strong><a href="../Failure to take responsibility.html">Failure to take responsibility</a></strong> - We are currently not properly taking responsibility for any plastic being released into the oceans.</li>
+	<li><strong><a href="../Ignorance of everything being sacred.html">Ignorance of everything being sacred</a></strong> - The spirits of the oceans are suffocating in the waste of our excess.</li>
+	<li><strong><a href="../Ignored externalities.html">Ignored externalities</a></strong> - Plastic waste in the form of microplastics is largely ignored as an externality.</li>
+	<li><strong><a href="../Mistreatment of animals.html">Mistreatment of animals</a></strong> - Microplastics are found in nearly 100% of samples of marine organisms. 100%.</li>
+	<li><strong><a href="../Over-reliance on technology.html">Over-reliance on technology</a></strong> - We are relying on a technological fix for the problem of microplastics.</li>
+	<li><strong><a href="../Poisoning the water, the earth, the air.html">Poisoning the water, the earth, the air</a></strong> - After humans are long since extinct and the sun burns the Earth's crust we might finally be rid of the plastic we've created.</li>
+	<li><strong><a href="../Pollution.html">Pollution</a></strong> - Microplastics are a type of pollution.</li>
+	<li><strong><a href="../The desacration of all places.html">The desacration of all places</a></strong> - Microplastics are everywhere.</li>
+	<li><strong><a href="../Waste.html">Waste</a></strong> - Microplastics are a type of waste.</li>
+<br>
+<br>
+<br>
+</ul>
+</body>
+</html>
