--- a/predicaments/Ocean acidification.html
+++ b/predicaments/Ocean acidification.html
@@ -11,22 +11,21 @@
 <p>It is a curious situation that the sea, from which life first arose should now be threatened by the activities of one form of that life. But the sea, though changed in a sinister way, will continue to exist; the threat is rather to life itself.</p>
 <cite>Rachel Carson, The Sea Around Us</cite>
 </blockquote><p><strong>Connections:</strong></p><ul>
-<li><a data-href="Agriculture" href="../Agriculture.html">Agriculture</a></li>
-<li><a data-href="Biodiversity loss" href="../Biodiversity loss.html">Biodiversity loss</a></li>
-<li><a data-href="Climate change" href="../Climate change.html">Climate change</a></li>
-<li><a data-href="Ecological crisis" href="../Ecological crisis.html">Ecological crisis</a></li>
-<li><a data-href="Tipping points" href="../Tipping points.html">Tipping points</a></li>
-<li><a data-href="Ignored externalities" href="../Ignored externalities.html">Ignored externalities</a></li>
-<li><a data-href="Carbon fundamentalism" href="../Carbon fundamentalism.html">Carbon fundamentalism</a></li>
-<li><a data-href="Lack of systems thinking" href="../Lack of systems thinking.html">Lack of systems thinking</a></li>
-<li><a data-href="Failure to take responsibility" href="../Failure to take responsibility.html">Failure to take responsibility</a></li>
-<li><a data-href="Carelessness" href="../Carelessness.html">Carelessness</a></li>
-<li><a data-href="Lack of the longterm" href="../Lack of the longterm.html">Lack of the longterm</a></li>
-<li><a data-href="Poisoning the water, the earth, the air" href="../Poisoning the water, the earth, the air.html">Poisoning the water, the earth, the air</a></li>
-<li><a data-href="The desacration of all places" href="../The desacration of all places.html">The desacration of all places</a></li>
-<li><a data-href="Unheeded warnings" href="../Unheeded warnings.html">Unheeded warnings</a></li>
-<head>
-<link rel="stylesheet" href="../css/styles.css">
-<base target="_top">
-</head>
-<h2></h2>
+	<li><strong><a href="../Biodiversity loss.html">Biodiversity loss</a></strong> - Annoying as it may be, not many animals would survive in a bottle of coke.</li>
+	<li><strong><a href="../Carbon fundamentalism.html">Carbon fundamentalism</a></strong> - Ocean acidification and the way we interpret its causes leads to us travelling further down the path of carbon fundamentalism, carbon emissions being the one and only problem to solve.</li>
+	<li><strong><a href="../Catastrophic risks.html">Catastrophic risks</a></strong> - We do not know what happens if all coral reefs die off. But it isn't good.</li>
+	<li><strong><a href="../Climate change.html">Climate change</a></strong> - There is likely a recursive connection between ocean acidification and climate change.</li>
+	<li><strong><a href="../Delusional domination of nature.html">Delusional domination of nature</a></strong> - Get fucked, stupid turtles.</li>
+	<li><strong><a href="../Ecological crisis.html">Ecological crisis</a></strong> - Ocean acidification is driving and driven by the ecological crisis.</li>
+	<li><strong><a href="../Extreme weather.html">Extreme weather</a></strong> - Acid rain sure sounds like it'd be quite cool. It's really not.</li>
+	<li><strong><a href="../Finite games.html">Finite games</a></strong> - The oceans are the foundations of life. Without thriving oceans all will end.</li>
+	<li><strong><a href="../Mistreatment of animals.html">Mistreatment of animals</a></strong> - You're supposed to pickle the herring after you've caught it, y'know?</li>
+	<li><strong><a href="../Moloch.html">Moloch</a></strong> - Moloch is immune to corrosion.</li>
+	<li><strong><a href="../Planetary boundaries.html">Planetary boundaries</a></strong> - Ocean acidification is one of the planetary boundaries. Funnily enough, it is one of three boundaries we haven't yet crossed. Go, humanity, you can do it! Leave no boundaries uncrossed!</li>
+	<li><strong><a href="../Poisoning the water, the earth, the air.html">Poisoning the water, the earth, the air</a></strong> - We are poisoning the ocean to breaking point.</li>
+	<li><strong><a href="../Tipping points.html">Tipping points</a></strong> - At what pH-level do we see complete global collapse of oceans?</li>
+<br>
+<br>
+<br>
+</ul>
+</html>
