--- a/predicaments/Waste.html
+++ b/predicaments/Waste.html
@@ -23,25 +23,44 @@
 <p>It is not that we have so little time but that we lose so much. ... The life we receive is not short but we make it so; we are not ill provided but use what we have wastefully. </p>
 <cite>Lucius Seneca</cite>
 </blockquote><p>Connections: </p><ul>
-<li><a data-href="Ecological crisis" href="../Ecological crisis.html">Ecological crisis</a></li>
-<li><a data-href="Planetary boundaries" href="../Planetary boundaries.html">Planetary boundaries</a></li>
-<li><a data-href="Pollution" href="../Pollution.html">Pollution</a></li>
-<li><a data-href="Ignored externalities" href="../Ignored externalities.html">Ignored externalities</a></li>
-<li><a data-href="Consumerism" href="../Consumerism.html">Consumerism</a></li>
-<li><a data-href="Cars" href="../Cars.html">Cars</a></li>
-<li><a data-href="Hemispherical asymmetry (Earth)" href="../Hemispherical asymmetry (Earth).html">Hemispherical asymmetry (Earth)</a></li>
-<li><a data-href="Carbon fundamentalism" href="../Carbon fundamentalism.html">Carbon fundamentalism</a></li>
-<li><a data-href="Complexity mismatch" href="../Complexity mismatch.html">Complexity mismatch</a></li>
-<li><a data-href="Lack of systems thinking" href="../Lack of systems thinking.html">Lack of systems thinking</a></li>
-<li><a data-href="Failure to take responsibility" href="../Failure to take responsibility.html">Failure to take responsibility</a></li>
-<li><a data-href="Ignorance of ongoing collapse" href="../Ignorance of ongoing collapse.html">Ignorance of ongoing collapse</a></li>
-<li><a data-href="The minimisation of all things wild" href="../The minimisation of all things wild.html">The minimisation of all things wild</a></li>
-<li><a data-href="Poisoning the water, the earth, the air" href="../Poisoning the water, the earth, the air.html">Poisoning the water, the earth, the air</a></li>
-<li><a data-href="The desacration of all places" href="../The desacration of all places.html">The desacration of all places</a></li>
-<li><a data-href="Ignorance of everything being sacred" href="../Ignorance of everything being sacred.html">Ignorance of everything being sacred</a></li>
-<li><a data-href="Story of separation" href="../Story of separation.html">Story of separation</a></li>
-<li><a data-href="Ignorance of interconnectedness" href="../Ignorance of interconnectedness.html">Ignorance of interconnectedness</a></li>
-<li><a data-href="Lack of compassion" href="../Lack of compassion.html">Lack of compassion</a></li>
-<li><a data-href="Lack of empathy" href="../Lack of empathy.html">Lack of empathy</a></li>
-<li><a data-href="Cognitive dissonance" href="../Cognitive dissonance.html">Cognitive dissonance</a></li>
+	<li><strong><a href="../Access to food.html">Access to food</a></strong> - We throw away almost 1 billion tonnes of food each year.</li>
+	<li><strong><a href="../Access to water.html">Access to water</a></strong> - Put enough waste into our freshwater sources and we won't have any clean water left to drink.</li>
+	<li><strong><a href="../Addiction.html">Addiction</a></strong> - Addiction can lead to entire lives wasted.</li>
+	<li><strong><a href="../Advertising.html">Advertising</a></strong> - Advertising is mostly a waste of space, time, and attention.</li>
+	<li><strong><a href="../Biodiversity loss.html">Biodiversity loss</a></strong> - Some animals thrive in human waste. Most don't. We don't.</li>
+	<li><strong><a href="../Blaming the people.html">Blaming the people</a></strong> - Reduce, reuse, recycle, am I right? Meanwhile there are fucking oil spills...</li>
+	<li><strong><a href="../Bullshit jobs.html">Bullshit jobs</a></strong> - What a complete waste of life most jobs are.</li>
+	<li><strong><a href="../Carelessness.html">Carelessness</a></strong> - They drive each other. It is much easier to be careless about waste in a dump than a pristine courtyard.</li>
+	<li><strong><a href="../Climate change.html">Climate change</a></strong> - We are generating enough waste to directly affect the climate of the planet. We're forced to eat where we shit.</li>
+	<li><strong><a href="../Consumerism.html">Consumerism</a></strong> - Waste and consumerism dance happily together.</li>
+	<li><strong><a href="../Data privacy.html">Data privacy</a></strong> - <a href="https://idlewords.com/talks/haunted_by_data.htm">Personal data should be treated as toxic waste.</a></li>
+	<li><strong><a href="../Ecological crisis.html">Ecological crisis</a></strong> - Ecosystems are drowning in our uncomposted shit.</li>
+	<li><strong><a href="../Educational systems.html">Educational systems</a></strong> - Much of childhood is wasted in stale indoctrination that's gone way past its expiry date.</li>
+	<li><strong><a href="../Extreme weather.html">Extreme weather</a></strong> - Waste will rain down, smearing our skyscrapers.</li>
+	<li><strong><a href="../Failure to take responsibility.html">Failure to take responsibility</a></strong> - Landfills?</li>
+	<li><strong><a href="../Greenwashing.html">Greenwashing</a></strong> - Two words. Paper. Straws.</li>
+	<li><strong><a href="../Hemispherical asymmetry (Earth).html">Hemispherical asymmetry (Earth)</a></strong> - I take all my shits on my neighbour's lawn. It's better that way. I usually blame their dog.</li>
+	<li><strong><a href="../Ignorance of everything being sacred.html">Ignorance of everything being sacred</a></strong> - Few things feel sacred when, looking up, you see golden temples among the misty ferns, looking down, you see a cigarette butt and an empty soda can.</li>
+	<li><strong><a href="../Ignored externalities.html">Ignored externalities</a></strong> - Waste is one of the, if not the main ignored externality of our global industrio-economic system.</li>
+	<li><strong><a href="../Illusion of no option.html">Illusion of no option</a></strong> - Sure, it's challenging. But there are options to generating ridiculous amounts of waste.</li>
+	<li><strong><a href="../Imprisonment.html">Imprisonment</a></strong> - Not that I necessarily care to leave Earth... But there is something deeply problematic with trapping ourselves on Earth within a sphere of spiralling space junk.</li>
+	<li><strong><a href="../Lack of balance.html">Lack of balance</a></strong> - All functioning ecosystems must have a balance between intake and waste generation.</li>
+	<li><strong><a href="../Lack of resilient systems.html">Lack of resilient systems</a></strong> - Waste will overwhelm our systems unless we decide and figure out how to deal with it.</li>
+	<li><strong><a href="../Lack of the longterm.html">Lack of the longterm</a></strong> - There is currently no speaking of anything longterm without speaking about how to reduce the waste we create and remove the waste already created.</li>
+	<li><strong><a href="../Limits to growth.html">Limits to growth</a></strong> - Waste is a clear limit to growth.</li>
+	<li><strong><a href="../Meat eating.html">Meat eating</a></strong> - Letting the energy we consume take the long path up through the food chain generates more and more wasted energy.</li>
+	<li><strong><a href="../Microplastics.html">Microplastics</a></strong> - Microplastics are a kind of waste.</li>
+	<li><strong><a href="../Net negative caloric extraction.html">Net negative caloric extraction</a></strong> - An efficient species lets as little energy as possible go to waste.</li>
+	<li><strong><a href="../Over-reliance on technology.html">Over-reliance on technology</a></strong> - Just keep living your life as usual. We've constructed a robot that is currently heading for the Pacific garbage patch. Oh, and there's an ongoing project that is training AI-models on the behaviour of crows and magpies in order to build something that can pick up metal waste. Oh, oh, and there's this industrial designer who makes couches out of airplane tires and discarded titanium alloys, real industrial chic.</li>
+	<li><strong><a href="../Planetary boundaries.html">Planetary boundaries</a></strong> - There are boundaries to the amount of waste we can generate.</li>
+	<li><strong><a href="../Poisoning the water, the earth, the air.html">Poisoning the water, the earth, the air</a></strong> - Waste poisons everything everywhere.</li>
+	<li><strong><a href="../Pollution.html">Pollution</a></strong> - Waste and pollution live happily ever after.</li>
+	<li><strong><a href="../Sustainable growth.html">Sustainable growth</a></strong> - Waste is an annoying thorn for the sustainable growth narrative.</li>
+	<li><strong><a href="../The desacration of all places.html">The desacration of all places</a></strong> - Most spirits mummified like sokushinbutsu barely breathing under all that stench.</li>
+	<li><strong><a href="../Virtue signalling.html">Virtue signalling</a></strong> - Yeah, I recycle. You don't? Oh, well, I guess I care more about the environment. Actually, I bought a pick-up truck just to be able to transport all of the things I take to the recycling station. Can you believe it goes 0-100 in 8 seconds? I know, I didn't believe it either!</li>
+
+
+<br>
+<br>
+<br>
 </ul></body></html>
