--- a/predicaments/Soil erosion.html
+++ b/predicaments/Soil erosion.html
@@ -39,7 +39,7 @@
 	<li><strong><a href="../Resources.html">Resources</a></strong> - To re-source, year after year, the nutrients we require, the soil must remain fertile.</li>
 	<li><strong><a href="../Social erosion.html">Social erosion</a></strong> - As above, so below. As below, so above.</li>
 	<li><strong><a href="../Tipping points.html">Tipping points</a></strong> - Soil erosion can occur quite rapidly whereas soil regeneration might take more than decades.</li>
-	<li><strong><a href="../Acceleration.html">War</a></strong> - Conflicts over arable land can,will, and has already turned into full-scale wars.</li>
+	<li><strong><a href="../Acceleration.html">War</a></strong> - Conflicts over arable land can, will, and have already turned into full-scale wars.</li>
 
 
 <br>
