--- a/predicaments/The Predicament Landscape.html
+++ b/predicaments/The Predicament Landscape.html
@@ -346,5 +346,7 @@ Are your feet bound? There is an old Chinese tradition known as <a href="https:/
 <p><strong>Note: I am not wise</strong><br>
     You might be wondering what right I have to write all of this. Do I really know enough? Am I clever? Am I wise? We all have varying degrees of wisdom and I often find that there are several voices within that come out in the writing of this work, some less wise than others. Others slightly more wise. I believe there is value in this simply because this type of thinking is so unexplored today that whatever tiny bit of wisdom and intellect one can pour into it, it will change it. I am young. I've always been slow to learn, slow to understand, bad at most things. I am not wise, at least not yet. I've had a privileged upbringing, but still, I have missed many, maybe even most, of my past years in mists of depression. I often speak more than I listen, act less than I think, and feel less than I think. There are conditioned beliefs that are near impossible to discern from truth, there is anger, aggression, hatred, crashing waves in places of required stillness, dried up rivers that should smooth out the crust of the Earth. Do not get hung up on who has written all of this, just try to find what resonates or changes you. Wisdom is not a state of being, it is a flow of becoming. It also matters little whether or not I am wise or you are wise. What matters is the collective wisdom.    </p>
 </p>
+<br><br><br>
+<br><br><br>
 
-<br><br><br></body></html>
+</body></html>
