Illustrate and link ecological metacrisis

--- a/predicaments/Biodiversity loss.html
+++ b/predicaments/Biodiversity loss.html
@@ -5,6 +5,7 @@
 <base target="_top">
 			</head>
 			<h2>Biodiversity loss</h2>
+			<img src="../img/biodiversity.png" width="100%">
 			<blockquote>
 				<p>From that time forth he believed that the wise man is one who never sets himself apart from other living things, whether they have speech or not, and in later years he strove long to learn what can be learned, in silence, from the eyes of animals, the flight of birds, the great slow gestures of trees.</p>
 				<cite>Ursula K. Le Guin, A Wizard of Earthsea</cite>
