--- a/predicaments/Climate change.html
+++ b/predicaments/Climate change.html
@@ -6,6 +6,7 @@
 <base target="_top">
 </head>
 <h2>Climate change</h2>
+<img src="../img/climate_change.png" width="100%">
 <p><strong>Global changes in average temperature</strong>, <a href="https://www.etymonline.com/word/climate">from equator to poles</a>, means a change in the Earth&#39;s climate. The climate is never static but what makes climate change a predicament is the speed at which it is currently happening, threatening the stability of the Earth&#39;s climate system and thereby our survival. Put simply, human activities such as burning fossil fuels, deforestation, agricultural practices, and industrial practices add greenhouse gases which trap heat in the lower atmosphere. This leads to global warming and rapid climate change. The global nature of climate change means it contributes to and potentially creates several related predicaments. This is the main reason why climate change specifically is a main focus in the discussion of our continued survival. It is, however, not certain that lowering the global temperature by any means necessary will lead to the desired effects. </p>
 <p>In some ways the predicament of climate change has been defined too narrowly, potentially leading to an illusion of understanding its complexity and thereby trusting that a solution is within our grasp as soon as we choose to grab it. This is one reason for why such a &quot;simple&quot; problem hasn&#39;t been prioritised at the cost of growth. Every predicament is interrelated but the increase in trapped energy on Earth might end up affecting all of them.</p>
 <blockquote>
