--- a/predicaments/Deforestation.html
+++ b/predicaments/Deforestation.html
@@ -6,6 +6,7 @@
 <base target="_top">
 </head>
 <h2>Deforestation</h2>
+<img src="../img/deforest.png" width="100%">
 <p><strong>Deforestation is the removal and destruction of forests</strong>. <a href="https://ourworldindata.org/deforestation">The UN FAO estimate that 10 million hectares of forest are cut down each year.</a> Two points of importance: one is that there is a difference between deforestation and net forest loss since forests are also regrowing and being replanted, second is that deforestation peaked in the 1980s. It is, however, also important to note that not all forests are equal and here we run into the potential issue with relying too heavily on quantification. We could most likely make most of the planet net positive in forest growth quite quickly by planting trees faster than we&#39;re removing them. The question is if we have a reason to trust our claimed understanding of the differences between artificially planted forests and naturally growing ones. Maybe we do? Do we truly understand what a forest is or are we missing it for all the trees?</p>
 <blockquote>
 	<p>There was a time when man* would walk in my woods, but now he has a mind of metal and wheels. He no longer cares for growing things. <br>
@@ -44,6 +45,7 @@
 	<li><strong><a href="../Monocultures (agriculture).html">Monocultures (agriculture)</a></strong> - You can barely begin to compare the complexity of an old-growth forest to the dead homogeneity of modern industrial farmland.</li>
 	<li><strong><a href="../Net negative caloric extraction.html">Net negative caloric extraction</a></strong> - Cutting down ancient forests to plant soy beans that we feed to cattle that we then eat. Yikes. Homo morus.</li>
 	<li><strong><a href="../Planetary boundaries.html">Planetary boundaries</a></strong> - Deforestation affects most and potentially all of our planetary boundaries.</li>
+	<li><strong><a href="../Quantification.html">Quantification</a></strong> - Forests aren't created equal but we often treat them like they are. An acre of fast-growing spruce can not be compared in any way to an acre of old oak trees.</li>
 	<li><strong><a href="../Resource conflicts.html">Resource conflicts</a></strong> - When resources such as wood become scarce, conflicts become inevitable.</li>
 	<li><strong><a href="../Sameness.html">Sameness</a></strong> - Rapidly growing firs in neat rows, mossless ground, is this why we rush to develop VR?</li>
 	<li><strong><a href="../Soil erosion.html">Soil erosion</a></strong> - <a href="https://www.nature.com/articles/s43017-020-0091-5">Deforestation leads to degrading soil properties</a>.</li>
