--- a/predicaments/Extreme weather.html
+++ b/predicaments/Extreme weather.html
@@ -11,11 +11,8 @@
 <p>Human activity is most likely the main driver of the increased frequency of extreme weather events. </p>
 <p>Extreme weather can also act as warnings and omens. Will we listen?</p>
 <blockquote>
-<p>Så bister kall sveper <strong>nordanvinden</strong> om stuguknuten den sena kväll.<br>
-I stugan sitter så blek om kinden en liten flicka vid spisens häll.<br>
-Den bleka hyn och de tärda dragen de vittna tydligt om sjukdom, nöd,<br>
-och hennes pappa har hela dagen för krogen glömt skaffa barnen bröd.</p>
-<cite>Anders G. Bergh</cite>
+<p>A tree with strong roots can withstand the most violent storm, but the tree can't grow roots just as the storm appears on the horizon..</p>
+<cite>Dalai Lama</cite>
 </blockquote>
 <p><strong>Connections:</strong></p><ul>
 	<li><strong><a href="../Access to food.html">Access to food</a></strong> - Farmers are dependent on the weather for good harvests.</li>
