--- a/predicaments/Desertification.html
+++ b/predicaments/Desertification.html
@@ -7,7 +7,11 @@
 		<h2>Desertification</h2>
 		<p><strong><a href="https://en.wikipedia.org/wiki/Desertification">Desertification is a type of land degradation whereby fertile areas become arid</a></strong>. This typically results from deforestation, drought, or inappropriate agricultural practices. </p>
 <p>Comparing a <a href="https://en.wikipedia.org/wiki/Desertification#/media/File:Desertification_map.png">map of global desertification vulnerability</a> with a <a href="https://ourworldindata.org/explorers/countries-in-conflict-data?facet=none&amp;Measure=Conflict+deaths&amp;Conflict+type=All+armed+conflicts&amp;Conflict+sub-type=Across+all+sub-types&amp;country=AFG~ETH~SYR~UKR">map of armed conflicts</a> hints at something. What?</p>
-		<p><strong>Connections:</strong></p><ul>
+		
+<p><blockquote>Desert, in generally, is a very good place to find yourself. Or lose yourself.</p>
+	<cite>Maynard James Keenan</cite>
+</blockquote>
+<p><strong>Connections:</strong></p><ul>
 			<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - The forming of deserts in previously arable land unfortunately accelerates the very factors that cause the desertification in the first place.</li>
 			<li><strong><a href="../Access to food.html">Access to food</a></strong> - If I ask you to, in your mind's eye, picture the Middle East, what do you see? Most Syrian refugees in Europe are fleeing from conflict with complicated and complex causes, from an expanding desert that was once called the Fertile Crescent of the Earth.</li>
 			<li><strong><a href="../Access to water.html">Access to water</a></strong> - A drier climate drives desertification and desertification drives a drier climate.</li>
