--- a/predicaments/Ecological crisis.html
+++ b/predicaments/Ecological crisis.html
@@ -7,12 +7,16 @@
 			<h2>Ecological crisis</h2>
 			<blockquote>
 				<p>
-					Once you learn to read the land, I have no fear of what you will do to it, or with it. And I know many pleasant things it will do to you.
+					Once you learn to read the land, I have no fear of what you will do to it, or with it. And I know many pleasant things it will do to you.</p>
 				<cite>Aldo Leopold</cite>
-				</p>
 			</blockquote>
 			<p>Ecology is the <a href="https://www.etymonline.com/word/ecology">study of our dwelling place</a>, more specifically a field of science studying the interconnected systems of Earth. </p>
 <p><strong>The ecological crisis is a destabilisation or breakdown of these systems large enough to threaten humanity&#39;s continued survival</strong>. It is, however, important to include other organisms in this since the ongoing man-made ecological crises are causing the extinction of multiple species every day. From a systems-thinking perspective every species going extinct reduces an ecosystem&#39;s options to restabilise after a destabilising event. It is therefore not unlikely that we end up snowballing the effects of climate change by reducing the resilience and complexity of ecosystems past the point where a recovery is possible.</p>
+<blockquote>
+	<p>
+		He is happiest, be he king or peasant, who finds peace in his home.</p>
+	<cite>Johann Wolfgang von Goethe</cite>
+</blockquote>
 <p><strong>Connections:</strong></p><ul>
 	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - The ecological crisis is accelerating and further accelerates many other predicaments towards the precipice.</li>
 	<li><strong><a href="../Access to food.html">Access to food</a></strong> - We live off of the benevolence of a functioning global being.</li>
