--- a/Loss of insect biomass.html
+++ b/Loss of insect biomass.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Loss of insect biomass</title>
+        <title>Insect loss</title>
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
@@ -20,7 +20,7 @@
     <a href="http://www.punk.ist/">punk.ist</a>
     </p>
     </div>
-    <embed type="text/html" src="predicaments/Loss of insect biomass.html" width="100%" height="100%">
+    <embed type="text/html" src="predicaments/Insect loss.html" width="100%" height="100%">
     </div> 
     <div style="overflow: auto; position: fixed; height: 100%; width: 62.5%; border: none;">
 
@@ -20157,7 +20157,7 @@
           transform="translate(-3943)" />
      </g>
   </a>
-     <a href="Loss of insect biomass.html">
+     <a href="Insect loss.html">
 <g
         id="g6698"
         inkscape:label="Insect_loss">
