--- a/predicaments/Access to food.html
+++ b/predicaments/Access to food.html
@@ -27,8 +27,8 @@
 <li><a data-href="Global supply chains" href="../Global supply chains.html">Global supply chains</a></li>
 <li><a data-href="Globalisation" href="../Globalisation.html">Globalisation</a></li>
 <li><a data-href="Hemispherical asymmetry (Earth)" href="../Hemispherical asymmetry (Earth).html">Hemispherical asymmetry (Earth)</a></li>
+<li><a data-href="Insect loss" href="../Insect loss.html">Insect loss</a></li>
 <li><a data-href="Lack of balance" href="../Lack of balance.html">Lack of balance</a></li>
-<li><a data-href="Loss of insect biomass" href="../Loss of insect biomass.html">Loss of insect biomass</a></li>
 <li><a data-href="Malnutrition" href="../Malnutrition.html">Malnutrition</a></li>
 <li><a data-href="Mass climate migration" href="../Mass climate migration.html">Mass climate migration</a></li>
 <li><a data-href="Monocultures (agriculture)" href="../Monocultures (agriculture).html">Monocultures (agriculture)</a></li>
