--- a/predicaments/Agriculture.html
+++ b/predicaments/Agriculture.html
@@ -15,7 +15,7 @@
 <li><a data-href="Climate change" href="../Climate change.html">Climate change</a></li>
 <li><a data-href="Deforestation" href="../Deforestation.html">Deforestation</a></li>
 <li><a data-href="Desertification" href="../Desertification.html">Desertification</a></li>
-<li><a data-href="Loss of insect biomass" href="../Loss of insect biomass.html">Loss of insect biomass</a></li>
+<li><a data-href="Insect loss" href="../Insect loss.html">Insect loss</a></li>
 <li><a data-href="Monocultures (agriculture)" href="../Monocultures (agriculture).html">Monocultures (agriculture)</a></li>
 <li><a data-href="Ocean acidification" href="../Ocean acidification.html">Ocean acidification</a></li>
 <li><a data-href="Supply chain fragility" href="../Supply chain fragility">Supply chain fragility</a></li>
