--- a/predicaments/Deforestation.html
+++ b/predicaments/Deforestation.html
@@ -31,13 +31,13 @@
 	<li><strong><a href="../Failure to take responsibility.html">Failure to take responsibility</a></strong> - Replanting is not enough. How does one take responsibility for silencing the oldest voices on Earth? Fuck you, <a href="https://en.wikipedia.org/wiki/Prometheus_(tree)">Donald R. Currey</a>.</li>
 	<li><strong><a href="../Ignored externalities.html">Ignored externalities</a></strong> - Deforestation has an endless amount of potentially catastrophic externalities that are largely unaccounted for.</li>
 	<li><strong><a href="../Immoral justifications.html">Immoral justifications</a></strong> - Believe it or not but no one is truly forcing us to cut down forests.</li>
+	<li><strong><a href="../Insect loss.html">Insect loss</a></strong> - <a href="https://worldrainforests.com/amazon/insects.html">Over 90%</a> of the species of the Amazon forest are insects.</li>
 	<li><strong><a href="../Lack of a living world view.html">Lack of a living world view</a></strong> - If the world is no longer alive, forests simply consisting of mute grids of planted firs, then that's that, innit?</li>
 	<li><strong><a href="../Lack of balance.html">Lack of balance</a></strong> - There is an intricate balance in nature and we should've been more careful of ruining it.</li>
 	<li><strong><a href="../Lack of dark spaces.html">Lack of dark spaces</a></strong> - No shade left to hide away from the scorching sunlight.</li>
 	<li><strong><a href="../Lack of resilient systems.html">Lack of resilient systems</a></strong> - Old forests are complex and resilient, young forests or clear-cut areas are not.</li>
 	<li><strong><a href="../Lack of time.html">Lack of time</a></strong> - What can we do when the Amazon is lost? Is it too late?</li>
 	<li><strong><a href="../Limits to growth.html">Limits to growth</a></strong> - How does our wealth keep growing when the forests are gone? What kind of fucking question is that?</li>
-	<li><strong><a href="../Loss of insect biomass.html">Loss of insect biomass</a></strong> - <a href="https://worldrainforests.com/amazon/insects.html">Over 90%</a> of the species of the Amazon forest are insects.</li>
 	<li><strong><a href="../Migration.html">Migration</a></strong> - Deforestation forces people to leave their homes, willingly or unwillingly.</li>
 	<li><strong><a href="../Missing elders.html">Missing elders</a></strong> - <a href="https://en.wikipedia.org/wiki/Old_Tjikko">Old Tjikko</a>'s roots were formed when humans started cultivating grains in the Fertile Crescent.</li>
 	<li><strong><a href="../Mistreatment of animals.html">Mistreatment of animals</a></strong> - Burning someone's house down could probably count as mistreatment.</li>
