--- a/predicaments/Ecological crisis.html
+++ b/predicaments/Ecological crisis.html
@@ -47,6 +47,7 @@
 	<li><strong><a href="../Immoral justifications.html">Immoral justifications</a></strong> - As the ecological crisis becomes ever more obvious, our justifications for our ways of life become ever more immoral.</li>
 	<li><strong><a href="../Industrial slaughter.html">Industrial slaughter</a></strong> - Systematic killing of other sentient beings, when explicit, takes the form of slaughterhouses. When implicit it takes the form of global ecological collapse.</li>
 	<li><strong><a href="../Inequality.html">Inequality</a></strong> - A global ecological crisis will not affect all beings equally. At least not at first.</li>
+	<li><strong><a href="../Insect loss.html">Insect loss</a></strong> - The loss of insects and the collapse of ecosystems go together.</li>
 	<li><strong><a href="../Lack of a living world view.html">Lack of a living world view</a></strong> - If we're killing the world it'll be harder to justify the claim that it's alive. In fact, quite a lot harder.</li>
 	<li><strong><a href="../Lack of balance.html">Lack of balance</a></strong> - In a way, the ecological crisis is one big unbalancing event.</li>
 	<li><strong><a href="../Lack of humility.html">Lack of humility</a></strong> - We haven't yet realised, it seems, that despite our alleged power over nature, we are so ridiculously tiny.</li>
@@ -54,7 +55,6 @@
 	<li><strong><a href="../Lack of the longterm.html">Lack of the longterm</a></strong> - Without functioning ecosystems there isn't any longterm to envision.</li>
 	<li><strong><a href="../Lack of time.html">Lack of time</a></strong> - How can we not see that time is up?</li>
 	<li><strong><a href="../Limits to growth.html">Limits to growth</a></strong> - The ecological crisis worldwide is a clear sign that one cannot grow indefinitely.</li>
-	<li><strong><a href="../Loss of insect biomass.html">Loss of insect biomass</a></strong> - The loss of insects and the collapse of ecosystems go together.</li>
 	<li><strong><a href="../Malnutrition.html">Malnutrition</a></strong> - What kills us with the ecological crisis might in the end be starvation.</li>
 	<li><strong><a href="../Mass climate migration.html">Mass climate migration</a></strong> - As the global ecological collapse makes itself evident locally there will be massive migrations to the pockets of greenery still alive.</li>
 	<li><strong><a href="../Material extraction.html">Material extraction</a></strong> - As long as the prevailing systems control us we must increase material extraction while we still can to be on top when we suddenly can't. Or something along those lines...</li>
