--- a/predicaments/Loss of insect biomass.html
+++ b/predicaments/Loss of insect biomass.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html> <html><head>
-		<title>Loss of insect biomass</title>
+		<title>Insect loss</title>
 		
 <head>
 <link rel="stylesheet" href="../css/styles.css">
 <base target="_top">
 </head>
-<h2>Loss of insect biomass</h2>
+<h2>Insect loss</h2>
 <p>Insects make up 90% of all animal species on Earth and are crucial parts of all ecosystems with pollinators being particularly important for the food supply for other animals and humans. Insect decline is a complex area to study and estimates on the rate of decline vary in different localities. A 2020 meta-analysis estimated a decline rate of 9% per decade for terrestrial insects but, notably, an increase in freshwater insects of 11% per decade. Most research, however, show declines in insects globally.</p>
 <blockquote>
 <p>A March 2019 statement by the <a data-tooltip-position="top" aria-label="https://en.wikipedia.org/wiki/Entomological_Society_of_America" class="external-link" title="Entomological Society of America" href="https://en.wikipedia.org/wiki/Entomological_Society_of_America" target="_blank">Entomological Society of America</a> said <em>there was not yet sufficient data to predict an imminent mass extinction of insects</em> and that some of the extrapolated predictions might "have been extended well past the limits of the data or have been otherwise over-hyped"</p>
