--- a/predicaments/Pollution.html
+++ b/predicaments/Pollution.html
@@ -36,12 +36,12 @@
 	<li><strong><a href="../Hyperstimuli.html">Hyperstimuli</a></strong> - Our minds are constantly polluted with streams of cornless shit.</li>
 	<li><strong><a href="../Ignored externalities.html">Ignored externalities</a></strong> - Pollution might be one of our most obvious ignored externalities of industry.</li>
 	<li><strong><a href="../Inertia.html">Inertia</a></strong> - If we halted all pollution immediately it would still have potentially detrimental consequences for centuries or even millenia.</li>
+	<li><strong><a href="../Insect loss.html">Insect loss</a></strong> - Pollution kills insects.</li>
 	<li><strong><a href="../Lack of dark spaces.html">Lack of dark spaces</a></strong> - Light pollution is very real. Not just for bats, for us too.</li>
 	<li><strong><a href="../Lack of quiet spaces.html">Lack of quiet spaces</a></strong> - Sound pollution. Not good. It's a great record store though.</li>
 	<li><strong><a href="../Lack of the longterm.html">Lack of the longterm</a></strong> - Our future looks increasingly bleak, in fact, there doesn't seem to be a future for us at all if pollution isn't addressed.</li>
 	<li><strong><a href="../Lack of time.html">Lack of time</a></strong> - We should've done something about pollution centuries ago.</li>
 	<li><strong><a href="../Limits to growth.html">Limits to growth</a></strong> - Pollution is a limit to growth.</li>
-	<li><strong><a href="../Loss of insect biomass.html">Loss of insect biomass</a></strong> - Pollution kills insects.</li>
 	<li><strong><a href="../Malnutrition.html">Malnutrition</a></strong> - Pollution gets everywhere, including in our food.</li>
 	<li><strong><a href="../Mental health.html">Mental health</a></strong> - There are more and less obvious ways in which pollution deteriorates mental health. The most obvious example is that air pollution seems to increase risk of and severity of depression.</li>
 	<li><strong><a href="../Microplastics.html">Microplastics</a></strong> - Microplastics make up a highly problematic class of pollution.</li>
