--- a/predicaments/The Predicament Landscape.html
+++ b/predicaments/The Predicament Landscape.html
@@ -150,6 +150,7 @@ Reading this may require certain skills and abilities we've largely let atrophy.
     <li data-line="108"><a data-href="Inequality" href="../Inequality.html">Inequality</a></li>
     <li data-line="109"><a data-href="Inertia" href="../Inertia.html">Inertia</a></li>
     <li data-line="110"><a data-href="Information isn't knowledge" href="../Information isn't knowledge.html">Information isn't knowledge</a></li>
+    <li data-line="144"><a data-href="Insect loss" href="../Insect loss.html">Insect loss</a></li>
     <li data-line="111"><a data-href="Investing" href="../Investing.html">Investing</a></li>
     <li data-line="112"><a data-href="Jevons paradox" href="../Jevons paradox.html">Jevons paradox</a></li>
     <li data-line="113"><a data-href="Knowledge isn't wisdom" href="../Knowledge isn't wisdom.html">Knowledge isn't wisdom</a></li>
@@ -183,7 +184,6 @@ Reading this may require certain skills and abilities we've largely let atrophy.
     <li data-line="141"><a data-href="Lobbyism" href="../Lobbyism.html">Lobbyism</a></li>
     <li data-line="142"><a data-href="Loneliness" href="../Loneliness.html">Loneliness</a></li>
     <li data-line="143"><a data-href="Loss of cultural complexity" href="../Loss of cultural complexity.html">Loss of cultural complexity</a></li>
-    <li data-line="144"><a data-href="Loss of insect biomass" href="../Loss of insect biomass.html">Loss of insect biomass</a></li>
     <li data-line="145"><a data-href="Madness of safety" href="../Madness of safety.html">Madness of safety</a></li>
     <li data-line="146"><a data-href="Malnutrition" href="../Malnutrition.html">Malnutrition</a></li>
     <li data-line="147"><a data-href="Map and territory" href="../Map and territory.html">Map and territory</a></li>
