--- a/Soil erosion.html
+++ b/Soil erosion.html
@@ -20157,7 +20157,7 @@
           transform="translate(-3943)" />
      </g>
   </a>
-     <a href="Loss of insect biomass.html">
+     <a href="Insect loss.html">
 <g
         id="g6698"
         inkscape:label="Insect_loss">
