--- a/predicaments/Extreme weather.html
+++ b/predicaments/Extreme weather.html
@@ -25,8 +25,8 @@
 	<li><strong><a href="../Ecological crisis.html">Ecological crisis</a></strong> - Extreme weather conditions are some of the clearest and most obvious factors for humans in the ecological crisis. Floods, heat weaves, temperature records, snow, unusual weather phenomena are all directly lived and experienced. How loud will the sirens have to be for the warnings to be heard?</li>
 	<li><strong><a href="../Energy consumption increasing.html">Energy consumption increasing</a></strong> - As outside temperatures vary we prefer inside temperatures to stay stable. Turn up the AC, will you, love?</li>
 	<li><strong><a href="../Hemispherical asymmetry (Earth).html">Hemispherical asymmetry (Earth)</a></strong> - Poorer countries somewhere else will take the first hits from extreme weather. When our ACs break it'll be too late for us.</li>
+	<li><strong><a href="../Insect loss.html">Insect loss</a></strong> - The weather is changing faster than many insect species can adapt to.</li>
 	<li><strong><a href="../Lack of humility.html">Lack of humility</a></strong> - Humanity might suddenly have to come to terms with just how small we are.</li>
-	<li><strong><a href="../Loss of insect biomass.html">Loss of insect biomass</a></strong> - The weather is changing faster than many insect species can adapt to.</li>
 	<li><strong><a href="../Mass climate migration.html">Mass climate migration</a></strong> - Droughts, floods, and the short fuse of the heavens will force many people to leave their homes.</li>
 	<li><strong><a href="../Moloch.html">Moloch</a></strong> - Moloch does not rust, his horns pierce the sky, he is flame and quake, flood and pest.</li>
 	<li><strong><a href="../Out of touch with seasons.html">Out of touch with seasons</a></strong> - <a href="https://wisdomtrove.com/author_quotes/dogen-quotes/">Can you paint spring without painting plums and peaches?</a></li>
