--- a/predicaments/Monocultures (agriculture).html
+++ b/predicaments/Monocultures (agriculture).html
@@ -11,7 +11,7 @@
 <li><a data-href="Biodiversity loss" href="../Biodiversity loss.html">Biodiversity loss</a></li>
 <li><a data-href="Climate change" href="../Climate change.html">Climate change</a></li>
 <li><a data-href="Ecological crisis" href="../Ecological crisis.html">Ecological crisis</a></li>
-<li><a data-href="Loss of insect biomass" href="../Loss of insect biomass.html">Loss of insect biomass</a></li>
+<li><a data-href="Insect loss" href="../Insect loss.html">Insect loss</a></li>
 <li><a data-href="Soil erosion" href="../Soil erosion.html">Soil erosion</a></li>
 <li><a data-href="Energy" href="../Energy.html">Energy</a></li>
 <li><a data-href="Net negative caloric extraction" href="../Net negative caloric extraction.html">Net negative caloric extraction</a></li>
