--- a/predicaments/updates.html
+++ b/predicaments/updates.html
@@ -9,17 +9,17 @@
 <p>There is now an illustration up on the start page and the predicaments in the ecological metacrisis are properly filled out. Onward!</p>
 <ul>
         <li><a href="../Biodiversity loss.html">Biodiversity loss</a></li>
-        <li><a href="../Climate change.html"></a>Climate change</li>
-        <li><a href="../Deforestation.html"></a>Deforestation</li>
-        <li><a href="../Desertification.html"></a>Desertification</li>
-        <li><a href="../Ecological crisis.html"></a>Ecological crisis</li>
-        <li><a href="../Extreme weather.html"></a>Extreme weather</li>
-        <li><a href="../Insect loss.html"></a>Insect loss</li>
-        <li><a href="../Microplastics.html"></a>Microplastics</li>
-        <li><a href="../Ocean acidification.html"></a>Ocean acidification</li>
-        <li><a href="../Pollution.html"></a>Pollution</li>
-        <li><a href="../Soil erosion.html"></a>Soil erosion</li>
-        <li><a href="../Waste.html"></a>Waste</li>
+        <li><a href="../Climate change.html">Climate change</a></li>
+        <li><a href="../Deforestation.html">Deforestation</a></li>
+        <li><a href="../Desertification.html">Desertification</a></li>
+        <li><a href="../Ecological crisis.html">Ecological crisis</a></li>
+        <li><a href="../Extreme weather.html">Extreme weather</a></li>
+        <li><a href="../Insect loss.html">Insect loss</a></li>
+        <li><a href="../Microplastics.html">Microplastics</a></li>
+        <li><a href="../Ocean acidification.html">Ocean acidification</a></li>
+        <li><a href="../Pollution.html">Pollution</a></li>
+        <li><a href="../Soil erosion.html">Soil erosion</a></li>
+        <li><a href="../Waste.html">Waste</a></li>
 </ul>
 <h3>2024-09-10</h3>
 <p>Have added link motivations to some of the predicaments in the Ecological Metacrisis part of the landscape. Have almost finished illustrating that part of the map as well, just have to digitise it and figure out how to make it clickable and functional.</p>
