Fix tiny grammar error

--- a/predicaments/Desertification.html
+++ b/predicaments/Desertification.html
@@ -8,7 +8,7 @@
 		<p><strong><a href="https://en.wikipedia.org/wiki/Desertification">Desertification is a type of land degradation whereby fertile areas become arid</a></strong>. This typically results from deforestation, drought, or inappropriate agricultural practices. </p>
 <p>Comparing a <a href="https://en.wikipedia.org/wiki/Desertification#/media/File:Desertification_map.png">map of global desertification vulnerability</a> with a <a href="https://ourworldindata.org/explorers/countries-in-conflict-data?facet=none&amp;Measure=Conflict+deaths&amp;Conflict+type=All+armed+conflicts&amp;Conflict+sub-type=Across+all+sub-types&amp;country=AFG~ETH~SYR~UKR">map of armed conflicts</a> hints at something. What?</p>
 		
-<p><blockquote>Desert, in generally, is a very good place to find yourself. Or lose yourself.</p>
+<p><blockquote>Desert, in general, is a very good place to find yourself. Or lose yourself.</p>
 	<cite>Maynard James Keenan</cite>
 </blockquote>
 <p><strong>Connections:</strong></p><ul>
