Small spelling fix

--- a/predicaments/Insect loss.html
+++ b/predicaments/Insect loss.html
@@ -21,7 +21,7 @@
 	<li><strong><a href="../Biased evidence selection.html">Biased evidence selection</a></strong> - Well, actually, where I live there seem to be a lot of mosquitoes nowadays. What do you say to that, huh?</li>
 	<li><strong><a href="../Biodiversity loss.html">Biodiversity loss</a></strong> - Insects make up an enormous part of the species of the planet and support most other species.</li>
 	<li><strong><a href="../Catastrophic risks.html">Catastrophic risks</a></strong> - It might sound like an exaggeration but if we suddenly lack the necessary amount of pollinators to keep our food production up we are well and truly fucked.</li>
-	<li><strong><a href="../Complexity mismatch.html">Complexity mismatch</a></strong> - Without a reduction of insects we have a heavily reduced natural complexity.</li>
+	<li><strong><a href="../Complexity mismatch.html">Complexity mismatch</a></strong> - With a reduction of insects we have a heavily reduced natural complexity.</li>
 	<li><strong><a href="../Delusional domination of nature.html">Delusional domination of nature</a></strong> - Well, I mean... To be fair, we appear to be quite good at developing working insecticides. Go humans.</li>
 	<li><strong><a href="../Ecological crisis.html">Ecological crisis</a></strong> - Insect loss is a massive part of the global ecological crisis.</li>
 	<li><strong><a href="../Ignorance of ongoing collapse.html">Ignorance of ongoing collapse</a></strong> - Even if we halted insect loss today there would most likely need to be active initiatives to restabilise and reintroduce insect populations.</li>
