--- a/predicaments/updates.html
+++ b/predicaments/updates.html
@@ -5,6 +5,25 @@
         </head>
 <title>Updates</title>
 <h2>Updates</h2>
+<h3>2024-09-25 Rain & Evil</h3>
+<p>The autumn equinox has been followed by days of darkness, pouring rain, and, consequently, calmness and coffee indoors. Many thoughts regarding balance and equilibrium have moved around in my mind lately. Anyways... I will be starting the process of illustrating and expanding the predicaments in the category currently named Metacrisis of Evil. The following predicaments are included in this category/continent:</p>
+<ul>
+        <li><a href="../War.html">War</a></li>
+        <li><a href="../Evil.html">Evil</a></li>
+        <li><a href="../Genocide.html">Genocide</a></li>
+        <li><a href="../Industrial slaughter.html">Industrial slaughter</a></li>
+        <li><a href="../Mistreatment of animals.html">Mistreatment of animals</a></li>
+        <li><a href="../Mistreatment of other humans.html">Mistreatment of other humans</a></li>
+        <li><a href="../Modern slavery.html">Modern slavery</a></li>
+        <li><a href="../Moloch.html">Moloch</a></li>
+        <li><a href="../Nuclear war.html">Nuclear war</a></li>
+        <li><a href="../Oppressive tyrannies for the good of its victims.html">Oppressive tyrannies for the good of its victims</a></li>
+        <li><a href="../Power concentration to the wrong people.html">Power concentration to the wrong people</a></li>
+        <li><a href="../Disinformation.html">Disinformation</a></li>
+        <li><a href="../The Dark Triad.html">The Dark Triad</a></li>
+        <li><a href="../Violence.html">Violence</a></li>
+</ul>
+<p>If you have any suggestions, ideas, complaints, or just want to get in touch, I happily discuss this with anyone who is interested. Just shoot me an email at david@punk.ist.</p>
 <h3>2024-09-23 Autumn Equinox & Ecological Metacrisis </h3>
 <p>There is now an illustration up on the start page and the predicaments in the ecological metacrisis are properly filled out. Onward!</p>
 <ul>
